oauth/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: oauth
  namespace: k8plex-test
spec:
  serviceName: oauth
  podManagementPolicy: "Parallel"
  replicas: 1
  selector:
    matchLabels:
      app: oauth
  template:
    metadata:
      labels:
        app: oauth
    spec:
      containers:
      - image: image-registry.vo.elte.hu/k8plex-oauth
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "echo PS1=\\'\\\\[\\\\033\\[01\\;36m\\\\]\\\\u\\\\[\\\\033\\[00m\\\\]@\\\\[\\\\033\\[00\\;32m\\\\]\\\\h-dev\\\\[\\\\033\\[00m\\\\]: \\\\[\\\\033\\[01\\;33m\\\\]\\\\w\\\\[\\\\033\\[00m\\\\]\\\\$ \\' >> /root/.bashrc"]
              #command: ["/bin/sh", "-c", "echo PS1=\\'\\\\[\\\\033\\[01\\;36m\\\\]\\\\u\\\\[\\\\033\\[00m\\\\]@\\\\[\\\\033\\[01\\;31m\\\\]\\\\h-dev\\\\[\\\\033\\[00m\\\\]: \\\\[\\\\033\\[01\\;33m\\\\]\\\\w\\\\[\\\\033\\[00m\\\\]\\\\a\\\\$ \\' >> /root/.bashrc"]
        name: oauth
        ports:
          - containerPort: 80
            name: http
        volumeMounts:
          - mountPath: /srv
            name: vol
            subPath: _code_/
          - mountPath: /var/log/oauth
            name: vol
            subPath: logs/
      nodeSelector:
        kubernetes.io/hostname: veo1
      volumes:
        - name: vol
          persistentVolumeClaim:
            claimName: oauth-data
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: oauth-db
  namespace: k8plex-test
spec:
  serviceName: oauth-db
  podManagementPolicy: "Parallel"
  replicas: 1
  selector:
    matchLabels:
      app: oauth-db
  template:
    metadata:
      labels:
        app: oauth-db
    spec:
      containers:
      - image: mariadb:10.5.4
        name: oauth-db
        ports:
          - containerPort: 3306
            name: mysql
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: vol
            subPath: db/
      nodeSelector:
        kubernetes.io/hostname: veo1
      volumes:
        - name: vol
          persistentVolumeClaim:
            claimName: oauth-data
