oauth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth-service
  namespace: k8plex-test
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
     - k8plex-test.vo.elte.hu
    secretName: k8plex-test-tls
  rules:
  - host: k8plex-test.vo.elte.hu
    http:
      paths:
      - path: /oauth-test
        pathType: Prefix
        backend:
          service:
            name: oauth
            port:
              number: 80
